выполнены задания 1-10 лр №1

--- a/Лабораторная1/task3.html
+++ b/Лабораторная1/task3.html
@@ -11,7 +11,7 @@
 		var div_out = document.getElementById("out");
 		var in_a = document.getElementById("ina");
 		var a = in_a.value;
-		div_out.innerHTML = a + "нас не остановят"  ;
+		div_out.innerHTML = a + " " + "нас не остановят"  ;
 		}
 		</script>
 	</body>
