--- a/Лабораторная 1/task7.html
+++ b/Лабораторная 1/task7.html
@@ -16,7 +16,7 @@
 			var b = document.getElementById("string_2");
 			var string_a = a.value;
 			var string_b = b.value;
-			div_out.innerHTML = "(" + "'" + string_a + "'" + "," + "'" + string_b + "'" + ")";
+			div_out.innerHTML = "(" + "'" + string_a + "'" + "," + "&nbsp" + "'" + string_b + "'" + ")";
 			}
 		</script>
 		<hr color = "red" width = "300" align = "left"> 
