--- a/Лабораторная 1/task9.html
+++ b/Лабораторная 1/task9.html
@@ -8,7 +8,7 @@
 		<table border = "1">
 			<tr>
 				<td colspan = "5" align="center"><b>Вводимые данные</b></td>
-				<td rowspan = "2" align="center" width = "300px">Результат</td>
+				<td rowspan = "2" align="center" width = "500px">Результат</td>
 			</tr>
 			<tr>
 				<td align="center">user</td>
@@ -41,7 +41,7 @@
 			var c = in_c.value;
 			var d = in_d.value;
 			var e = in_e.value;
-			div_out.innerHTML = "User ID &nbsp = &nbsp " + a + ";" + "&nbsp" + "Password &nbsp=&nbsp" + b + ";" + "&nbsp" + "Host &nbsp = &nbsp" +
+			div_out.innerHTML = "User ID &nbsp = &nbsp " + a + ";" + "&nbsp" + "Password &nbsp=&nbsp" + b + ";" + "<br>" + "&nbsp" + "Host &nbsp = &nbsp" +
 			c + ";" + "&nbsp" + "Port &nbsp = &nbsp" + d + ";" + "&nbsp" + "Database &nbsp = &nbsp" + e + ";" 
 			}
 		</script>
