6 лр все задания/7лр задачи 1-19

--- a/Лабораторная 6/task2.html
+++ b/Лабораторная 6/task2.html
@@ -9,7 +9,7 @@
 	function work(){
 	var div_out = document.getElementById("out");
 	var result = " ";
-	for (var a = 17; a<=47; a+5){
+	for (var a = 17; a<=47; a++){
 	result = result + a + "&nbsp;";
 	}
 	div_out.innerHTML = result ;  
